test_case/rust-lang_rust/53216_411702876.rs
plain
[00:48:44] ....................................................................................................
[00:48:47] ....................................................................................................
[00:48:49] ....................................................................................................
[00:48:52] ....................................................................................................
[00:48:55] ..............iiiiiiiii.............................................................................
[00:48:57] ......................................................................................F.............
[00:49:04] ....................i...............................................................................
[00:49:07] ..............................i.....................................................................
[00:49:10] ....................................................................................................
[00:49:13] ....................................................................................................
[00:49:13] ....................................................................................................
":null,"expansion":null}],"children":[],"rendered":"warning: not reporting region error due to nll\n  --> /checkout/src/test/ui/lifetime-errors/ex2a-push-one-existing-name-early-bound.rs:17:12\n   |\nLL |     x.push(y); //~ ERROR explicit lifetime required\n   |            ^\n\n"}
[00:49:18] {"message":"explicit lifetime required in the type of `y`","code":{"code":"E0621","explanation":"\nThis error code indicates a mismatch between the lifetimes appearing in the\nfunction signature (i.e., the parameter types and the return type) and the\ndata-flow found in the function body.\n\nErroneous code example:\n\n